vagrant/demos/stars-demo/policy/allow-ui-client.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  namespace: client 
  name: allow-ui 
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: management-ui
