vagrant/demos/stars-demo/policy/backend-policy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  namespace: default
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      role: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 6379
