vagrant/demos/stars-demo/policy/frontend-policy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  namespace: default
  name: frontend-policy
spec:
  podSelector:
    matchLabels:
      role: frontend 
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: client
      ports:
        - protocol: TCP
          port: 80
